linter/src/snapshots/squawk_linter__test_rules__adding_check_constraint.snap
---
source: linter/src/lib.rs
expression: "check_sql(bad_sql, &[\"prefer-robust-stmts\".into()])"
---
Ok(
    [
        RuleViolation {
            kind: ConstraintMissingNotValid,
            span: Span {
                start: 0,
                len: Some(
                    94,
                ),
            },
            messages: [
                Note(
                    "Requires a table scan to verify constraint and an ACCESS EXCLUSIVE lock which blocks reads.",
                ),
                Help(
                    "Add NOT VALID to the constraint and then VALIDATE the constraint.",
                ),
            ],
        },
    ],
)
