linter/src/snapshots/squawk_linter__test_rules__adding_field_with_default.snap
---
source: linter/src/lib.rs
expression: "check_sql(bad_sql, &[\"prefer-robust-stmts\".into()])"
---
Ok(
    [
        RuleViolation {
            kind: AddingFieldWithDefault,
            span: Span {
                start: 0,
                len: Some(
                    76,
                ),
            },
            messages: [
                Note(
                    "In Postgres versions <11 adding a field with a DEFAULT requires a table rewrite with an ACCESS EXCLUSIVE lock.",
                ),
                Help(
                    "Add the field as nullable, then set a default, backfill, and remove nullabilty.",
                ),
            ],
        },
    ],
)
