linter/src/snapshots/squawk_linter__test_rules__adding_foreign_key-2.snap
---
source: linter/src/lib.rs
expression: "check_sql(ok_sql, &[\"prefer-robust-stmts\".into()])"
---
Ok(
    [],
)
