linter/src/snapshots/squawk_linter__test_rules__adding_index_non_concurrently.snap
---
source: linter/src/lib.rs
expression: "check_sql(bad_sql, &[\"prefer-robust-stmts\".into()])"
---
Ok(
    [
        RuleViolation {
            kind: RequireConcurrentIndexCreation,
            span: Span {
                start: 0,
                len: Some(
                    79,
                ),
            },
            messages: [
                Note(
                    "Creating an index blocks writes.",
                ),
                Help(
                    "Create the index CONCURRENTLY.",
                ),
            ],
        },
    ],
)
