linter/src/snapshots/squawk_linter__test_rules__ensure_ignored_when_new_table.snap
---
source: linter/src/lib.rs
expression: "check_sql(sql, &[RuleViolationKind::PreferTextField.to_string()])"
---
Ok(
    [],
)
